--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "amplify": "npx ampx sandbox"
+    "amplify": "npx ampx sandbox",
+    "sandbox": "env-cmd -f .env.local ampx sandbox"
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.13.2",
+    "@aws-sdk/client-bedrock-agent-runtime": "^3.981.0",
     "aws-amplify": "^6.16.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -29,6 +31,7 @@
     "aws-cdk": "^2.1104.0",
     "aws-cdk-lib": "^2.237.0",
     "constructs": "^10.4.5",
+    "env-cmd": "^11.0.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
