--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^6.13.2",
     "@aws-sdk/client-bedrock-agent-runtime": "^3.981.0",
+    "@aws-sdk/client-s3": "^3.983.0",
     "aws-amplify": "^6.16.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
