--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@aws-amplify/ui-react": "^6.13.2",
     "@aws-sdk/client-bedrock-agent-runtime": "^3.981.0",
     "@aws-sdk/client-s3": "^3.983.0",
+    "@aws-sdk/s3-request-presigner": "^3.983.0",
     "aws-amplify": "^6.16.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
